# dropshipping-ml

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  1a80b6b51a48_add_candidate_market_snapshot_and_.py  1f0827ca20ca_add_market_reality_analysis.py  238560d6ccf9_refactor_candidate_market_snapshot_for_.py  2a5303ff9856_add_api_payload_table.py  30ed7eb66173_add_meli_credentials_support_table.py  4c11a24fad27_add_meli_credentials_table.py  4d9f2c1a8b77_add_commercial_opportunity_analysis.py  55e701907026_initial_market_intelligence_schema.py  6c8eaec31dc1_add_constraints_and_indexes_for_.py  d4fb6f3df9fd_add_candidate_qualification_fields.py  ef5796c86bb5_add_opportunity_alert_table.py
app/: main.py
app/clients/: meli_api_client.py  mercadolivre_client.py
app/core/: candidate_status.py  constants.py  exceptions.py  logging.py  settings.py  text_normalization.py
app/db/: session.py
app/jobs/: alert_opportunities.py  analyze_commercial_opportunities.py  analyze_market_reality.py  build_candidates.py  enrich_candidates.py  enrich_items.py  list_alerts.py  list_commercial_analyses.py  list_investment_priorities.py  list_market_reality.py  qualify_candidates.py  rank_opportunities.py  score_candidates.py  search_marketplace.py  sync_seller_items.py  sync_trends.py
app/models/: __init__.py  analytics.py  auth.py  core.py  market.py  market_price_snapshot.py  raw.py
app/normalization/: product_equivalence.py  (+1 more)
scripts/: print_meli_token.py
tests/: test_scoring.py  test_title_norm.py
(+36 files in other folders)
