[project]
name = "mercadolivre-ml-pipeline"
version = "0.1.0"
description = "Pipeline modular para inteligência de mercado e operação futura no Mercado Livre"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "typer>=0.15.0",
  "structlog>=25.0.0",
  "tenacity>=9.0.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[project.scripts]
ml-pipeline = "app.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
